modified:   css/style.css

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 {
     margin-top: 20px;
     width: 800px;
+    height: 480px;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
