--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ input
     margin-top: 10px;
     width: 97.55%;
     float: left;
+    text-align: center;
     padding: 6px;
     font-size: 18px;
     height: 22px;
