--- a/photo-exchange/css/style.css
+++ b/photo-exchange/css/style.css
@@ -19,7 +19,8 @@ a
     padding: 6px 12px;
     background-color: #337ab7;
     outline: none;
-    font-size: 18px;
+    font-size: 16px;
+    font-family: cursive;
 }
 .button:hover
 {
