--- a/photo-exchange/css/style.css
+++ b/photo-exchange/css/style.css
@@ -48,6 +48,8 @@ a
     padding: 6px 0px 6px 6px;
     height: 22px;
     float: left;
+    font-family: sans-serif;
+    font-size: 17px;
 }
 .link_end
 {
