--- a/photo-exchange/css/style.css
+++ b/photo-exchange/css/style.css
@@ -32,7 +32,6 @@ a
 .block_content
 {
     border: 4px solid #337ab7;
-    border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     background-color: white;
@@ -51,6 +50,7 @@ a
     text-align: left;
     padding: 6px 0px 6px 6px;
     height: 22px;
+    width: 152px;
     float: left;
     font-family: sans-serif;
     font-size: 17px;
@@ -66,6 +66,7 @@ a
     padding: 6px 8px 6px 3px;
     height: 22px;
     float: left;
+    width: 21px;
 }
 /*Стиль для самого input-а*/
 input
