--- a/photo-exchange/css/style.css
+++ b/photo-exchange/css/style.css
@@ -52,8 +52,8 @@ a
     height: 22px;
     width: 152px;
     float: left;
-    font-family: sans-serif;
-    font-size: 17px;
+    font-family: 'Comic Sans MS', sans-serif;
+    font-size: 15px;
 }
 .link_end
 {
