--- a/photo-exchange/css/style.css
+++ b/photo-exchange/css/style.css
@@ -15,6 +15,11 @@
     max-height: 300px;
     max-width: 300px;
 }
+.bl_none_img
+{
+    background-image: url(//smurfik997.github.io/photo-exchange/images/nofoto.png);
+    background-size: contain;
+}
 .main_bl_img
 {
     height: 300px;
