--- a/photo-exchange/css/style.css
+++ b/photo-exchange/css/style.css
@@ -18,7 +18,10 @@
 .bl_none_img
 {
     background-image: url(//smurfik997.github.io/photo-exchange/images/nofoto.png);
+    background-repeat: no-repeat;
     background-size: contain;
+    width: 300px;
+    height: 300px;
 }
 .main_bl_img
 {
