--- a/AppForVK/css/main.css
+++ b/AppForVK/css/main.css
@@ -21,16 +21,15 @@ body {
     position: absolute;
     text-align: center;
     height: 32px;
-    background: #5ab5ff;
+    background: #ff5a5a;
     color: white;
     font: 24px Calibri;
     line-height: 32px;
     border: 0;
     border-radius: 4px;
     outline: 0;
-    padding-left: 4px;
-    padding-right: 4px;
+    padding: 2px 10px;
 }
 #button:hover {
-    background: #5aa4ff;
+    background: #ff695a;
 }
