--- a/AppForVK/css/main.css
+++ b/AppForVK/css/main.css
@@ -15,7 +15,6 @@ body {
     background: rgba(0, 0, 0, 0.25);
     position: absolute;
     z-index: 1;
-    display: none;
 }
 #h {
     height: 64px;
@@ -24,6 +23,28 @@ body {
     font: 600 30px Calibri;
     text-align: center;
     line-height: 64px;
+}
+#close {
+    color: red;
+    padding: 0px 10px;
+    float: right;
+    font: 30px Calibri;
+    line-height: 30px;
+    transform: rotate(-45deg);
+    -webkit-user-select: none;
+    cursor: pointer;
+}
+#panel {
+    border-bottom: solid gray 1px;
+    width: 200px;
+    height: 30px;
+}
+#res_content {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background: white;
+    border-radius: 5px;
 }
 #button {
     position: absolute;
@@ -37,6 +58,7 @@ body {
     border-radius: 4px;
     outline: 0;
     padding: 2px 10px;
+    cursor: pointer;
 }
 #button:hover {
     background: #ff695a;
