--- a/AppForVK/css/main.css
+++ b/AppForVK/css/main.css
@@ -3,6 +3,7 @@ body {
     margin: 0 auto;
     min-width: 200px;
     min-height: 200px;
+    overflow-x: hidden;
 }
 #main_block {
     background: #f9f9f9;
@@ -41,6 +42,8 @@ body {
 }
 #res_content {
     position: absolute;
+    top: 50%;
+    left: 50%;
     width: 200px;
     height: 200px;
     background: white;
@@ -49,6 +52,8 @@ body {
 #button {
     position: absolute;
     text-align: center;
+    left: 50%;
+    top: 50%;
     height: 32px;
     background: #ff5a5a;
     color: white;
