--- a/AppForVK/css/main.css
+++ b/AppForVK/css/main.css
@@ -37,23 +37,22 @@ body {
 }
 #panel {
     border-bottom: solid gray 1px;
-    width: 200px;
+    width: 150px;
     height: 30px;
 }
 #res_content {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 100px;
     background: white;
     border-radius: 5px;
 }
-#button {
+.button {
     position: absolute;
     text-align: center;
     left: 50%;
-    top: 50%;
     height: 32px;
     background: #ff5a5a;
     color: white;
@@ -64,7 +63,17 @@ body {
     outline: 0;
     padding: 2px 10px;
     cursor: pointer;
+    user-select: none;
 }
-#button:hover {
+.button:hover {
     background: #ff695a;
+}
+#button {
+    top: 50%;
+}
+#button1 {
+    background: #00ff00;
+}
+#button1:hover {
+    background: #00ff66;
 }
