--- a/PixelArt/css/style.css
+++ b/PixelArt/css/style.css
@@ -13,7 +13,7 @@ body {
     right: 0;
     margin: auto;
     background-color: #ffffff;
-    border-radius: 8px;
+    border-radius: 1%;
 }
 
 #save {
