--- a/cats/css/main.css
+++ b/cats/css/main.css
@@ -1,7 +1,10 @@
 @charset "utf-8";
 body {
     margin: 0px auto;
-    overflow-x: hidden;
+    color: rgb(92, 92, 92);
+    font-family: Calibri;
+    -webkit-font-smoothing: antialiased;
+    font-weight: 500;
 }
 #mainBlock {
     width: inherit;
@@ -17,11 +20,7 @@ body {
     height: 30px;
     background: rgb(220, 220, 220);
     text-align: center;
-    color: rgb(92, 92, 92);
-    font-family: Calibri;
     font-size: 16px;
-    -webkit-font-smoothing: antialiased;
-    font-weight: 500;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
 }
 #pageName {
@@ -30,6 +29,7 @@ body {
 }
 #browserPanel {
     position: absolute;
+    z-index: 0;
     left: 6px;
 }
 #content {
@@ -41,6 +41,7 @@ body {
     background: rgb(248, 248, 248);
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
     position: absolute;
+    z-index: 2;
     top: 80px;
     left: 110px;
 }
@@ -50,4 +51,22 @@ body {
     width: 12px;
     height: 12px;
     margin-top: 9px;
+    z-index: 1;
+}
+#pagePreloader {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 60px;
+    background: rgb(255, 255, 255);
+    z-index: 50;
+}
+#preloaderText {
+    position: absolute;
+    user-select: none;
+    z-index: 51;
+    width: 100%;
+    top: 50%;
+    margin-top: -30px;
 }
