--- a/cats/css/main.css
+++ b/cats/css/main.css
@@ -7,8 +7,8 @@ body {
     font-weight: 500;
 }
 #mainBlock {
-    width: inherit;
-    height: inherit;
+    position: absolute;
+    z-index: -50;
     background: rgb(243, 243, 243);
     min-width: 720px;
     min-height: 480px;
@@ -33,17 +33,18 @@ body {
     left: 6px;
 }
 #content {
-    min-height: 350px;
-    min-width: 500px;
     height: 350px;
-    width: 500px;
+    width: 612px;
     border-radius: 3px;
     background: rgb(248, 248, 248);
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
     position: absolute;
     z-index: 2;
-    top: 80px;
-    left: 110px;
+    margin-top: -125px;
+    margin-left: -306px;
+    top: 50%;
+    left: 50%;
+    background-size: cover;
 }
 .browserIcon {
     min-width: 12px;
@@ -69,4 +70,7 @@ body {
     width: 100%;
     top: 50%;
     margin-top: -30px;
+}
+#contentSizes {
+    display: none;
 }
