--- a/cats/css/main.css
+++ b/cats/css/main.css
@@ -7,6 +7,7 @@ body {
     font-weight: 500;
 }
 #mainBlock {
+    display: none;
     position: absolute;
     z-index: -50;
     background: rgb(243, 243, 243);
