--- a/cats/css/main.css
+++ b/cats/css/main.css
@@ -45,6 +45,7 @@ body {
     margin-left: -306px;
     top: 50%;
     left: 50%;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 .browserIcon {
