--- a/PixelArt 2.0/css/main.css
+++ b/PixelArt 2.0/css/main.css
@@ -8,10 +8,14 @@ body {
 }
 
 #title {
-    font: 400 35px/60px Arial;
+    font-weight: 400;
+    font-size: 90px;
+    line-height: 180px;
+    font-family: Arial;
     background: white;
     color: rgb(100, 100, 100);
     box-shadow: 0px 0px 40px rgba(120, 120, 120, 0.5);
+    transition: line-height 0.5s, font-size 0.5s;
 }
 
 #main {
