--- a/PixelArt 2.0/css/main.css
+++ b/PixelArt 2.0/css/main.css
@@ -2,12 +2,14 @@ body {
     --gray: rgb(220, 220, 220);
     margin: 0 auto;
     text-align: center;
-    min-width: 300px;
-    min-height: 300px;
+    min-width: 400px;
+    min-height: 400px;
     background: var(--gray);
 }
 
 #title {
+    height: 180px;
+    width: 100%;
     font-weight: 400;
     font-size: 90px;
     line-height: 180px;
@@ -15,7 +17,7 @@ body {
     background: white;
     color: rgb(100, 100, 100);
     box-shadow: 0px 0px 40px rgba(120, 120, 120, 0.5);
-    transition: line-height 0.5s, font-size 0.5s;
+    transition: line-height 0.5s, font-size 0.5s, height 0.5s;
 }
 
 #main {
