--- a/PixelArt 2.0/css/main.css
+++ b/PixelArt 2.0/css/main.css
@@ -20,6 +20,42 @@ body {
     transition: line-height 0.5s, font-size 0.5s, height 0.5s;
 }
 
+#tText {
+    float: left;
+    width: 60%;
+    height: 100%;
+}
+
+.iconB {
+    position: relative;
+    height: 60%;
+    top: 20%;
+    width: 20%;
+    left: 0;
+    float: left;  
+}
+
+.hover:active {
+    box-shadow: 0px 0px 20px rgba(120, 120, 120, 0.75);
+    transform: rotate(360deg);
+}
+
+.hover:hover {
+    box-shadow: 0px 0px 20px rgba(120, 120, 120, 0.75);
+    transform: rotate(360deg);
+}
+
+.r {
+    float: right !important;
+}
+
+.icon {
+    transition: box-shadow 0.5s, transform 0.5s;
+    height: 100%;
+    border-radius: 50%;
+    float: left;
+}
+
 #main {
     text-align: inherit;
     border-radius: 1.5%;
