--- a/PixelArt 2.0/css/main.css
+++ b/PixelArt 2.0/css/main.css
@@ -36,12 +36,14 @@ body {
 }
 
 .hover:active {
-    box-shadow: 0px 0px 20px rgba(120, 120, 120, 0.75);
+    box-shadow: 0px 0px 30px rgba(120, 120, 120, 0.6);
+    background: rgba(120, 120, 120, 0.1);
     transform: rotate(360deg);
 }
 
 .hover:hover {
-    box-shadow: 0px 0px 20px rgba(120, 120, 120, 0.75);
+    box-shadow: 0px 0px 30px rgba(120, 120, 120, 0.6);
+    background: rgba(120, 120, 120, 0.1);
     transform: rotate(360deg);
 }
 
