--- a/PixelArt 2.0/css/main.css
+++ b/PixelArt 2.0/css/main.css
@@ -36,14 +36,14 @@ body {
 }
 
 .hover:active {
-    box-shadow: 0px 0px 40px rgba(120, 120, 120, 0.5);
-    background: rgba(120, 120, 120, 0.1);
+    box-shadow: 0px 0px 40px rgba(0, 255, 200, 0.5);
+    background: rgba(0, 255, 200, 0.1);
     transform: rotate(360deg);
 }
 
 .hover:hover {
-    box-shadow: 0px 0px 40px rgba(120, 120, 120, 0.5);
-    background: rgba(120, 120, 120, 0.1);
+    box-shadow: 0px 0px 40px /*rgba(120, 120, 120, 0.5)*/ rgba(0, 255, 200, 0.5);
+    background: /*rgba(120, 120, 120, 0.1)*/ rgba(0, 255, 200, 0.1);
     transform: rotate(360deg);
 }
 
