--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -15,6 +15,28 @@ body {
     user-select: none;
 }
 
+#error {
+    font-weight: 400; 
+    font-family: Arial; 
+    background-color: white; 
+    color: rgb(130, 130, 130); 
+    position: fixed;
+    padding: 19em 10%;
+    font-size: 1em;
+    width: 80%;
+    height: 3em;
+    z-index: 100;
+}
+
+.content {
+    position: fixed;
+    top: 10%;
+    width: 100%;
+    height: 90%;
+    transition: left 2s;
+    left: 0%;
+}
+
 #title {
     height: 10%;
     width: 100%;
