--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -1,3 +1,25 @@
+/*error class start*/
+#error {
+    font-weight: 400; 
+    font-family: Arial; 
+    background-color: white; 
+    color: rgb(130, 130, 130); 
+    position: fixed;
+    font-size: 24px;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+}
+
+.errorText {
+    position: absolute;
+    top: 50%;
+    line-height: 50%;
+    width: 80%;
+    left: 10%;
+}
+/*error class end*/
+
 body {
     /*var-s*/
     --light-gray: rgb(220, 220, 220);
@@ -13,19 +35,6 @@ body {
     text-align: center;
     background-color: var(--light-gray);
     user-select: none;
-}
-
-#error {
-    font-weight: 400; 
-    font-family: Arial; 
-    background-color: white; 
-    color: rgb(130, 130, 130); 
-    position: fixed;
-    padding: 19em 10%;
-    font-size: 1em;
-    width: 80%;
-    height: 3em;
-    z-index: 100;
 }
 
 .content {
