--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -14,8 +14,8 @@
 
 .errorText {
     position: absolute;
-    top: 50%;
-    line-height: 50%;
+    top: 48%;
+    line-height: 24px;
     width: 80%;
     left: 10%;
 }
