--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -72,16 +72,6 @@ body {
     float: left;  
 }
 
-.hover:hover {
-    box-shadow: var(--grayShadow);
-    background-color: rgba(120, 120, 120, 0.1);
-    transform: rotate(360deg);
-}
-
-.hover {
-    transition: box-shadow 1.25s, transform 0.5s, background-color 1.25s;
-}
-
 .r {
     float: right !important;
 }
@@ -90,6 +80,7 @@ body {
     height: 100%;
     border-radius: 50%;
     float: left;
+    transition: ease-in-out box-shadow 1.25s, transform 1.25s, background-color 1.25s;
 }
 
 .plot {
