--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -13,11 +13,11 @@
 }
 
 .errorText {
-    position: absolute;
-    top: 48%;
     line-height: 24px;
+    display: table-cell;
+    vertical-align: middle;
     width: 80%;
-    left: 10%;
+    padding: 0 10%;
 }
 /*error class end*/
 
