--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -49,8 +49,8 @@ body {
 
     margin: 0 auto;
     text-align: center;
-    min-width: 350px;
-    min-height: 350px;
+    min-width: 400px;
+    min-height: 400px;
     background-color: var(--light-gray);
     user-select: none;
 }
@@ -77,7 +77,7 @@ body {
     height: 12%;
     width: 100%;
     font-weight: 400;
-    font-size: 6vh;
+    font-size: 7.2vh;
     line-height: 12vh;
     font-family: Arial;
     background-color: white;
@@ -119,9 +119,8 @@ body {
 
 .plot {
     text-align: inherit;
-    border-radius: 1.5%;
+    border-radius: 3%;
     background-color: white;
-    padding: 2%;
 }
 
 .yL {
@@ -135,5 +134,22 @@ body {
 }
 
 .sItem {
-    height: 29%;
+    height: 20%;
+    width: 80%;
+    float: left;
+}
+
+#continueB {
+    background-color: var(--red);
+    border-top-left-radius: 0 !important;
+    border-top-right-radius: 0 !important; 
+    color: white;
+    width: 100%;
+    
+}
+
+#createM {
+    font-weight: 400;
+    font-family: Arial;
+    color: var(--gray)
 }
