--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -135,6 +135,7 @@ body {
 .sItem {
     height: 20%;
     width: 100%;
+    background-color: white;
 }
 
 .sText {
@@ -155,7 +156,7 @@ body {
 #createM {
     font-weight: 400;
     font-family: Arial;
-    color: var(--gray)
+    color: var(--gray);
 }
 
 .gray {
