--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -143,7 +143,7 @@ body {
     display: table-cell;
     vertical-align: middle;
     width: 65%;
-    padding: 7% 5% 7% 10%;
+    padding: 0 5% 0 10%;
     text-align: left;
     /*float: left;*/
 }
@@ -151,22 +151,18 @@ body {
 .counter {
     width: 30%;
     height: 35%;
-
 }
 
 #continueB {
     background-color: var(--green);
     color: white;
-    width: 100%; 
+    width: 100%;
+    height: 20%;
 }
 
 .continue {
-    height: 30%;
-    line-height: 100%;
-    width: 100%;
     text-align: center;
-    margin: 7% 0;
-    font-size: 100%;
+    padding: 0;
 }
 
 #createM {
@@ -178,9 +174,4 @@ body {
 .gray {
     background-color: rgb(200, 200, 200);
     color: white
-}
-
-.b {
-    display: block;
-    padding: 0;
 }
