--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -135,6 +135,7 @@ body {
 .sItem {
     height: 20%;
     width: 100%;
+    padding: 1%;
     display: table;
     background-color: white;
 }
@@ -152,7 +153,7 @@ body {
     display: table;
     width: 92%;
     height: 70%;
-    margin-top: 7.5%;
+    margin-top: 6.5%;
 }
 
 .counterB {
