--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -144,7 +144,7 @@ body {
     display: table-cell;
     vertical-align: middle;
     width: 61%;
-    padding: 0 2% 0 4%;
+    padding: 0 3%;
     text-align: left;
     /*float: left;*/
 }
@@ -153,7 +153,7 @@ body {
     display: table;
     width: 92%;
     height: 70%;
-    margin-top: 6.5%;
+    margin-top: 6.75%;
 }
 
 .counterB {
