--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -161,7 +161,7 @@ body {
     width: 33%;
     display: table-cell;
     background-color: var(--red);
-    opacity: 0.7;
+    opacity: .2;
     color: white;
     border-radius: 20% 0 0 20%;
     padding: 0 3%;
