--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -171,7 +171,7 @@ body {
 .counterT {
     height: 100%;
     width: 34%;
-    padding: 0 0 0 1%;
+    padding: 1% 0 0 0;
     display: table-cell;
     color: var(--gray);
     background-color: white;
