--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -170,7 +170,7 @@ body {
 .counterT {
     height: 100%;
     width: 34%;
-    padding: 1% 0 0 0;
+    padding: 1% 1% 0 0;
     display: table-cell;
     color: var(--gray);
     background-color: white;
