--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -21,6 +21,11 @@
 }
 /*error class end*/
 
+@font-face {
+    font-family: Habel;
+    src: url('HabelDemo.otf');
+}
+
 #preload {
     background-color: white; 
     position: fixed;
@@ -75,8 +80,9 @@ body {
     height: 12%;
     width: 100%;
     font-weight: 400;
-    font-size: 7.2vh;
-    font-family: sans-serif;
+    font-size: 10vh;
+    line-height: 13.5vh;
+    font-family: Habel;
     background-color: white;
     color: var(--gray);
     box-shadow: var(--grayShadow);
@@ -87,8 +93,6 @@ body {
     width: 70%;
     height: 100%;
     display: table;
-    position: relative;
-    top: 1.7vh;
 }
 
 .iconB {
@@ -209,4 +213,8 @@ body {
 .gray {
     background-color: var(--light-gray);
     color: white
+}
+
+.noDisp {
+    display: none;
 }
