--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -106,7 +106,7 @@ body {
 }
 
 .iconR {
-    transform: rotate(45deg) translate(0, 0); 
+    transform: rotate(45deg) translate(-1px, 0px); 
 }
 
 .r {
