--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -184,7 +184,6 @@ body {
     opacity: .4;
     color: white;
     border-radius: 20% 0 0 20%;
-    padding: 0 3%;
     vertical-align: middle;
 }
 
@@ -206,7 +205,7 @@ body {
 
 .plus {
     border-radius: 0 20% 20% 0;
-    padding: 0 1% 0 0;
+    padding: 1% 1% 0 0;
     background-color: var(--green);
     opacity: 1;
 }
@@ -234,5 +233,14 @@ body {
 }
 
 .noDisp {
-    display: none;
+    display: none !important;
+}
+
+#fCurrNum {
+    float: left; 
+    width: 32%; 
+    margin: 2.4vh 17.5% 0 20.5%; 
+    line-height: 7.2vh; 
+    font-family: sans-serif; 
+    font-size: 4vh;
 }
