--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -238,8 +238,8 @@ body {
 
 #fCurrNum {
     float: left; 
-    width: 32%; 
-    margin: 2.4vh 17.5% 0 20.5%; 
+    width: 70%; 
+    margin: 2.4vh 0; 
     line-height: 7.2vh; 
     font-family: sans-serif; 
     font-size: 4vh;
