--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -77,7 +77,7 @@ body {
 }
 
 #title {
-    height: 12%;
+    height: 12vh;
     width: 100%;
     font-weight: 400;
     font-size: 9vh;
@@ -239,7 +239,7 @@ body {
 #fCurrNum {
     float: left; 
     width: 70%; 
-    margin: 2.4vh 0; 
+    margin: 2.3vh 0; 
     line-height: 7.2vh; 
     font-family: sans-serif; 
     font-size: 4vh;
