--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -88,9 +88,9 @@ body {
     position: fixed;
 }
 
-.titleC {
+/*.titleC {
     animation: titleC .5s;
-}
+}*/
 
 @keyframes titleC {
     0% {
@@ -124,6 +124,10 @@ body {
 
 .iconR {
     transform: rotate(45deg); 
+}
+
+.iconR90 {
+    transform: rotate(90deg); 
 }
 
 .r {
@@ -247,4 +251,9 @@ body {
     line-height: 7.2vh; 
     font-family: sans-serif; 
     font-size: 4vh;
+}
+
+.colorB {
+    width: 100%;
+    height: 14.28%;
 }
