--- a/PixelArt/css/main.css
+++ b/PixelArt/css/main.css
@@ -97,6 +97,10 @@ body {
     position: fixed;
 }
 
+span {
+    vertical-align: middle;
+}
+
 /*.titleC {
     animation: titleC .5s;
 }*/
@@ -218,7 +222,7 @@ body {
 
 .plus {
     border-radius: 0 20% 20% 0;
-    padding: 1% 1% 0 0;
+    padding: 1% 1.5% 0 0;
     background-color: var(--green);
     opacity: 1;
 }
@@ -256,10 +260,7 @@ body {
 #fCurrNum {
     float: left; 
     width: 70%; 
-    margin: 2.4vh 0; 
-    line-height: 7.2vh; 
     font-family: sans-serif; 
-    font-size: 4vh;
 }
 
 .colorB {
