--- a/check/main.css
+++ b/check/main.css
@@ -11,6 +11,34 @@ body {
     background: var(--back-color);
     color: var(--main-color);
     font-size: 32px;
+    overflow: hidden;
+}
+
+section {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: linear .4s top;
+}
+
+section[main] {
+    top: 0;
+}
+
+section[login] {
+    top: 100%;
+}
+
+body[login] section[main] {
+    top: -100%;
+}
+
+body[login] section[login] {
+    top: 0;
+}
+
+label {
+    font-size: 0;
 }
 
 /* body::before {
@@ -83,7 +111,8 @@ main input[type="text"] {
 }
 
 main input[type="text"]:not(:invalid) {
-    width: 310px;
+    padding-right: 26px;
+    width: 284px;
 }
 
 /* main input[type="text"]:focus {
@@ -103,13 +132,16 @@ main input[type="text"]:focus::placeholder {
 main input[type="submit"] {
     position: absolute;
     margin-top: 8px;
-    margin-left: -30px;
+    margin-left: -15px;
 
     width: 20px;
     height: 20px;
+    font-size: 0;
     background:  transparent;
+    outline: none;
+    -webkit-tap-highlight-color: transparent !important;
 
-    transform-origin: bottom;
+    transform-origin: 0 0;
     transform: rotate(45deg);
 
     border: 0;
