--- a/check/main.css
+++ b/check/main.css
@@ -11,6 +11,11 @@ body {
     background: var(--back-color);
     color: var(--main-color);
     font-size: 32px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     overflow: hidden;
 }
 
@@ -18,7 +23,7 @@ section {
     position: absolute;
     width: 100%;
     height: 100%;
-    transition: linear .4s top, linear .15s opacity;
+    transition: linear .4s top, linear .25s opacity;
 }
 
 section[main] {
