--- a/check/main.css
+++ b/check/main.css
@@ -1,6 +1,6 @@
 :root {
-    --back-color: rgb(230, 230, 230);
-    --main-color: rgb(30, 30, 30);
+    --back-color: rgb(245, 245, 245);
+    --main-color: rgb(50, 50, 50);
 }
 
 html {
@@ -11,12 +11,19 @@ body {
     background: var(--back-color);
     color: var(--main-color);
     font-size: 32px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    overflow: hidden;
+}
+
+@keyframes overflow-anim {
+    0% {
+        overflow: hidden;
+    }
+    100% {
+        overflow: hidden;
+    }
+}
+
+body[login] {
+    animation: linear .4s overflow-anim;
 }
 
 section {
@@ -32,6 +39,7 @@ section[main] {
 }
 
 section[login] {
+    display: none;
     top: 100%;
 }
 
@@ -40,8 +48,18 @@ body[login] section[main] {
     opacity: 0;
 }
 
+@keyframes login-display {
+    0% {
+        top: 100%;
+    }
+    100% {
+        top: 0;
+    }
+}
+
 body[login] section[login] {
-    top: 0;
+    display: block;
+    animation: .4s linear login-display forwards;
 }
 
 label {
@@ -58,7 +76,6 @@ label {
     background-size: cover;
     opacity: 0.02;
 } */
-
 
 header {
     padding: 25px;
@@ -101,7 +118,7 @@ main > button, form[login] input[type="text"] {
     color: inherit;
     user-select: none;
     outline: none;
-    transition: linear .2s all;
+    transition: linear .15s all;
 
     background: none;
     
@@ -122,10 +139,6 @@ form[login] input[type="text"]:not(:invalid) {
     width: 250px;
 }
 
-/* main input[type="text"]:focus {
-    width: 310px;
-} */
-
 form[login] input[type="text"]::placeholder {
     color: var(--main-color);
     opacity: .5;
@@ -145,7 +158,7 @@ form[login] label[for="submit"] {
     font-size: 0;
     margin-left: -30px;
 
-    transition: linear .2s opacity;
+    transition: linear .15s opacity;
     visibility: hidden;
     opacity: 0;
 }
@@ -209,6 +222,6 @@ footer div[arrow] {
     margin: 3px;
     width: 10px;
     height: 10px;
-    border-top: 2px solid #ffffff;
-    border-left: 2px solid #ffffff;
+    border-top: 2px solid var(--main-color);
+    border-left: 2px solid var(--main-color);
 } */
