--- a/check/default.css
+++ b/check/default.css
@@ -1,6 +1,13 @@
 @font-face {
-    font-family: Comfortaa;
-    src: url("Comfortaa.ttf");
+    font-family: 'Comfortaa';
+    src: url('Comfortaa-Cyrillic.woff2') format('woff2');
+    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+
+@font-face {
+    font-family: 'Comfortaa';
+    src: url('Comfortaa-Latin.woff2') format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 body, header, main, footer, span, p, button, input,
@@ -12,5 +19,5 @@ thead, tbody, td, th, em, tr, h1, h2, h3, h4 {
     text-align: left;
     text-decoration: none;
 
-    font-family: Comfortaa, sans-serif;
+    font-family: 'Comfortaa', -apple-system, serif;
 }
