--- a/check/main.css
+++ b/check/main.css
@@ -115,6 +115,26 @@ main {
     transform: translateY(-50%);
 }
 
+section[data-login] main {
+    transform: translateY(-29px);
+}
+
+main div[role="error-block"] {
+    width: 100%;
+    margin: 6px auto;
+
+    text-align: center;
+    font-size: 60%;
+    color: rgb(200, 30, 60);
+    opacity: 0;
+    
+    transition: linear .15s opacity;
+}
+
+main div[role="error-block"][data-visible] {
+    opacity: 1;
+}
+
 main button, form[data-login] input[type="text"] {
     width: 310px;
     max-width: 85%;
@@ -143,6 +163,29 @@ form[data-login] input[type="text"] {
     border: 0;
     border-bottom: 2px solid var(--main-color);
 }
+
+@keyframes login-loading {
+    0% {
+        /* color: var(--main-color); */
+        border-color: var(--main-color);
+    }
+    50% {
+        /* color: rgba(250, 180, 100); */
+        border-color: rgba(250, 180, 100);
+    }
+    100% {
+        /* color: var(--main-color); */
+        border-color: var(--main-color);
+    }
+}
+
+form[data-login][data-loading] input[type="text"] {
+    animation: linear 1.5s login-loading .4s both infinite;
+}
+
+/* form[data-login][data-loading] input[type="submit"] {
+    animation: linear 1.5s login-loading .4s both infinite;
+} */
 
 form[data-login] input[type="text"]:not(:invalid) {
     padding: 6px 30px;
@@ -214,13 +257,17 @@ footer {
     top: 100%;
     transform: translate(0, -100%);
     overflow: hidden;
+    text-align: center;
+    line-height: 40px;
 
     width: 100%;
-    height: 30px;
+    box-sizing: border-box;
+    height: 60px;
 }
 
 footer div[data-arrow] {
     margin: 5px auto;
+    margin-top: 35px;
     width: 20px;
     height: 20px;
     transform: rotate(45deg);
@@ -234,6 +281,21 @@ footer div[data-circle] {
     height: 15px;
     border: 2px solid var(--main-color);
     border-radius: 15px;
+}
+
+footer button {
+    border: none;
+    border-bottom: solid 2px var(--main-color);
+    background:  transparent;
+    outline: none;
+    -webkit-tap-highlight-color: transparent !important;
+
+    font-size: 55%;
+    opacity: 0.75;
+}
+
+footer button:active, footer button:focus {
+    opacity: 1;
 }
 
 /* footer div::after {
