--- a/check/main.css
+++ b/check/main.css
@@ -1,6 +1,6 @@
 :root {
     --back-color: rgb(245, 245, 245);
-    --main-color: rgb(50, 50, 50);
+    --main-color: rgb(40, 40, 40);
 }
 
 html {
@@ -99,7 +99,7 @@ header > h1 {
 }
 
 header > h1[data-visible] {
-    font-size: 100%;
+    font-size: 95%;
     text-align: center;
 }
 
@@ -128,19 +128,22 @@ main div[role="error-block"] {
     color: rgb(200, 30, 60);
     opacity: 0;
     
-    transition: linear .15s opacity;
+    /* transition: linear .15s opacity; */
 }
 
 main div[role="error-block"][data-visible] {
     opacity: 1;
-    animation: linear 1.35s .15s error-block-anim forwards;
+    animation: linear 1s error-block-anim forwards;
 }
 
 @keyframes error-block-anim {
-    /* 0% {
+    0% {
+        opacity: 0;
+    }
+    15% {
         opacity: 1;
-    } */
-    70% {
+    }
+    85% {
         opacity: 1;
     }
     100% {
@@ -164,7 +167,11 @@ main button, form[data-login] input[type="text"] {
     background: none;
     
     border: 2px solid var(--main-color);
-    border-radius: 0;
+    border-radius: 2px;
+}
+
+main button {
+    border-radius: 4px; /* experimental */
 }
 
 form[data-login] input[type="text"] {
@@ -175,6 +182,14 @@ form[data-login] input[type="text"] {
     padding: 6px 0;
     border: 0;
     border-bottom: 2px solid var(--main-color);
+}
+
+form[data-login] input[type="text"]::-webkit-calendar-picker-indicator, 
+form[data-login] input[type="text"]::-webkit-list-button {
+    display: none !important;
+    opacity: 0  !important;
+    width: 0 !important;
+    height: 0 !important;
 }
 
 @keyframes login-loading {
@@ -236,7 +251,7 @@ form[data-login][data-loading] label[for="submit"] {
 }
 
 form[data-login] input[type="submit"] {
-    margin: 8px 16px;
+    margin: 7px 16px;
 
     width: 20px;
     height: 20px;
@@ -248,8 +263,8 @@ form[data-login] input[type="submit"] {
     transform-origin: 0 0;
     transform: rotate(45deg);
 
-    border: 0;
-    border-radius: 0;
+    border: 0; 
+    border-radius: 2px; /* experimental */
     border-top: 2px solid var(--main-color);
     border-right: 2px solid var(--main-color);
 }
@@ -290,6 +305,7 @@ footer div[data-arrow] {
     transform: rotate(45deg);
     border-top: 2px solid var(--main-color);
     border-left: 2px solid var(--main-color);
+    border-radius: 2px; /* experimental */
 }
 
 footer div[data-circle] {
